--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.2",
     "classnames": "^2.5.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
