setup tanstack router

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-router": "^1.132.7",
+    "@tanstack/react-router-devtools": "^1.132.11",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
@@ -27,6 +29,7 @@
     "@storybook/addon-onboarding": "^9.1.8",
     "@storybook/addon-vitest": "^9.1.8",
     "@storybook/react-vite": "^9.1.8",
+    "@tanstack/router-plugin": "^1.132.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
